--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-This little application applies a different coloring method on a functional
-language, Scheme. Instead of coloring keywords, it colorizes elements
-at the same depth with the same color. The purpose of the application is to make
+This little application applies a coloring method on a functional programming
+language, Scheme. Instead of coloring keywords, it colorizes parantheses
+of the same depth with the same color. Purpose of the application is to make
 programmers read and keep track of the code in an easier way.
 
 It uses deprecated HTML tag "font" to colorize.
@@ -10,15 +10,13 @@ It is a very simple application. Any comments or suggestions are welcome.
 functions.ss is an example scheme file whose colorized html form can be found as
 functions.html in the repository.
 
-After compiling the code, you can simply run the program like the following:
+After compiling the code, you can simply run the program like this:
 
 java ColorizeScheme functions.ss
 
-or
+or to choose a user defined output file name:
 
 java ColorizeScheme functions.ss output.html
-
-to choose a user defined output file name.
 
 I make sure just two things about the correctness of input Scheme code:
 
